# slvsx-cli

./: .gitignore  .gitmodules  BUILD.md  BUILD_GUIDE.md  CHANGE_INVENTORY.md  CI.md  CI_INVESTIGATION.md  COVERAGE.md  CURRENT_STATUS.md  Cargo.toml  Claude.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  MCP_README.md  MCP_SERVER.md  MCP_SETUP.md  QUICKSTART.md  README-EASY.md  README.md  RECOVERY.md  SHOWCASE.md  SIGABRT_FIX.md  SOLUTION_FOUND.md  build-libslvs-static.sh  build-slvs-minimal.sh  build-wasm.sh  build-with-nix.sh  build.nix  build.sh  ci-status.md  codecov.yml  commit-static-build.sh  fix-example-links.sh  homebrew-formula.rb  install.sh  mcp-config.json  mcp-server.js  package-lock.json  package.json  (+12 more)
.cargo/: .global-cache  config.toml
.githooks/: pre-push
.github/workflows/: build.yml  ci-status.yml  ci.yml  ci.yml.disabled  docker-build.yml  release.yml  simple-release.yml  version-check.yml
ci-results/20250906_223945/: results.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  io.rs  json_error.rs  main.rs  mcp.rs
crates/core/: Cargo.toml  build.rs
crates/core/schema/: slvs-json.schema.json
crates/core/src/: constraint_generator.rs  constraint_registry.rs  distance_validator.rs  error.rs  expr.rs  ffi.rs  ir.rs  lib.rs  mesh_validator.rs  phase_calculator.rs  phase_validator.rs  planetary_geometry_test.rs  planetary_validator.rs  ring_overlap_test.rs  schema_validator.rs  solver.rs  translator.rs  validator.rs  wasm.rs
crates/core/tests/: circle_point_reference_tests.rs  constraint_effectiveness_tests.rs  constraint_tests.rs  convenience_constraints_tests.rs  entity_processing_tests.rs  ffi_error_tests.rs  integration_tests.rs
crates/exporters/: Cargo.toml
crates/exporters/src/: dxf.rs  gear_geometry.rs  gear_stl.rs  gear_teeth.rs  involute.rs  lib.rs  ring_gear.rs  slvs.rs  stl.rs  svg.rs
crates/exporters/tests/: circle_projection_tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ADVANCED_TECHNIQUES.md  AI_GUIDE.md  AI_INTERACTIVE_FEATURES.md  AI_MODELING_GUIDE.md  BUILDING.md  DEBUG_METHODOLOGY.md  DESIGN_METHODOLOGY.md  DEVELOPMENT.md  ITERATIVE_DESIGN.md  JSON_SCHEMA.md  MCP_DESIGN.md  MCP_INTEGRATION.md  OTHER_FEATURES.md  SIGABRT_ISSUE.md  SOLVESPACE_FEATURES.md  USAGE_EXAMPLES.md  VISUAL_GALLERY.md
examples/: 00_introduction.md  01_basic_distance.json  01_basic_distance.md  01_basic_distance_solution.json  01_first_point.json  01_first_point.md  01_first_point_solution.json  02_distance_constraint.json  02_distance_constraint.md  02_distance_constraint_solution.json  02_triangle.json  02_triangle.md  02_triangle_solution.json  03_constraints.md  03_correctly_constrained.json  03_correctly_constrained_solution.json  03_lines_and_length.json  03_lines_and_length.md  03_lines_and_length_solution.json  03_overconstrained.json  04_3d_tetrahedron.json  04_3d_tetrahedron.md  04_3d_tetrahedron_solution.json  04_triangle.json  04_triangle.md  04_triangle_solution.json  05_circles.json  05_circles_solution.json  05_parallel_perpendicular.json  05_parallel_perpendicular.md  06_circles.json  06_circles.md  06_circles_solution.json  07_point_on_line.json  07_point_on_line.md  07_point_on_line_solution.json  08_angles.json  08_angles.md  09_coincident.json  09_coincident.md  (+47 more)
examples/06_typescript_generator/: README.md  generated_parametric_truss.json  generator.ts  package.json  schema.json  simple_truss.json  types.ts
examples/ai-examples/: README.md  four_bar_linkage.json  gear_meshing.json  triangle_solver.json
examples/basics/: triangle.json
examples/constraints/: 01_fixed_constraint.json  01_fixed_constraint.md  02_distance_constraint.md  03_angle_constraint.md  04_perpendicular_parallel.md  05_radius_circle.md
examples/generators/: README.md  birdhouse.py
examples/testdata/: double_orbit_corrected.json  double_orbit_gears.json  double_orbit_planetary.json  double_orbit_proper.json  double_planetary.json  double_planetary_6_6.json  double_planetary_6_6_triangular.json  double_planetary_6planets.json  double_planetary_6planets_180deg.json  fixed_3_planet_stub.json  four_bar_linkage.json  interlocking_orbits.json  linkage_example.json  meshing_gears.json  minimal_plate.json  minimal_test.json  optimal_double_planetary_3p.json  perfect_36_9_18_72.json  perfect_double_planetary.json  perfect_triangular_36_18_12_72.json  (+31 more)
ffi/: basic_solver.c  build.rs  mimalloc_stub.c  real_slvs_wrapper.c  simple_wrapper.c  slvs_real_wrapper.c  slvs_wrapper.c  slvs_wrapper.h
libslvs/: build-slvs.cmake
libslvs-static/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
libslvs-static/extlib/eigen/: .gitignore
libslvs-static/src/platform/: platformbase.cpp
libslvs-static/src/slvs/: CMakeLists.txt
mcp-server/: slvsx-mcp.py
minimal-repro/: Cargo.toml  README.md  test.sh
minimal-repro/.cargo/: config.toml
minimal-repro/src/: main.rs
npx-wrapper/: index.js  package.json
schema/: README.md  slvs-json.schema.json
scripts/: build-docs.ts  bump-version.sh  create-release.sh  generate_renders.sh  postinstall.js  solve_and_render.sh  validate-json.py  validate-schema.js  verify_model.sh  verify_renders.sh
slvsx-linux/: slvsx-Linux-x86_64
slvsx-macos/: slvsx-Darwin-arm64
tests/: cli_integration_test.rs  example_validation_test.rs  generic_constraints.rs  integration_test.rs  interactive_features_test.rs  mcp-server.test.js  mcp_server_test.rs  new_entity_types_test.rs  ring_overlap_test.rs  validation_tests.rs
tools/: analyze_phase_modulo.py  calculate_24_8_18_66.py  calculate_triangular_positions.py  create_36_9_18_72.py  create_perfect_triangular.py  detect_meshing_overlaps.py  detect_overlaps.py  exhaustive_phase_search.py  find_6planet_solution.py  find_perfect_mesh.py  find_phase_compatible_triangular.py  find_safe_triangular.py  find_valid_double_planetary.py  find_valid_triangular.py  find_working_tooth_counts.py  validate_gear_system.py
visualizer/: index.html  package.json  visualizer.js
wasm-dist/: example.html  slvsx_core.d.ts  slvsx_core.js  slvsx_core_bg.wasm  slvsx_core_bg.wasm.d.ts
(+1 files in other folders)
