[package]
name = "slvsx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "slvsx"
path = "src/main.rs"

[dependencies]
slvsx-core = { path = "../core" }
slvsx-exporters = { path = "../exporters" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true