[package]
name = "slvsx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ordered-float = "4.2"
indexmap = { version = "2.2", features = ["serde"] }
schemars = "0.8"
wasm-bindgen = { version = "=0.2.89", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true

[features]
default = []
mock-solver = []
yaml = ["dep:serde_yaml"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "mock-solver"]

[dependencies.serde_yaml]
version = "0.9"
optional = true