[package]
name = "slvsx-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "WebAssembly bindings for SLVSX constraint solver"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slvsx-core = { path = "../core", features = ["mock-solver"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["mock-solver"]
mock-solver = ["slvsx-core/mock-solver"]